--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">@color/color_blue_500</item>
@@ -8,17 +9,18 @@
         <item name="android:textColorPrimary">@color/color_white</item>
         <item name="android:textColorSecondary">@color/color_white</item>
         <item name="icon">@color/color_white</item>
-        <item name="divider">@color/color_grey_300</item>
+        <item name="divider">@color/color_black</item>
         <item name="android:selectableItemBackground">@drawable/selector_action_buttons</item>
-
-        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-
+        <!-- PopupMenuTextColor Properties -->
+        <item name="android:textColor">@color/color_black</item>
+        <!-- StatusBar Properties -->
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@color/color_blue_700</item>
         <!-- enable window content transitions -->
         <item name="android:windowContentTransitions">true</item>
-
         <!-- enable overlap of transitions -->
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
     </style>
+
 </resources>
