--- a/app/src/main/res/drawable/shape_rectangle_button_app_no_pressed.xml
+++ b/app/src/main/res/drawable/shape_rectangle_button_app_no_pressed.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:angle="270"
-        android:endColor="@color/color_blue_500"
-        android:startColor="@color/color_blue_500" />
+    <solid android:color="@color/color_blue_500" />
 </shape>
