--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -2,10 +2,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/color_blue_500</item>
         <item name="colorPrimaryDark">@color/color_blue_700</item>
-        <item name="colorAccent">@color/color_blue_500</item>
+        <item name="colorAccent">@color/color_grey_700</item>
         <item name="android:textColorPrimary">@color/color_white</item>
         <item name="android:textColorSecondary">@color/color_white</item>
         <item name="icon">@color/color_white</item>
